Fixed The Alignment Of Footer

--- a/client/src/components/Footer/FooterStyle.css
+++ b/client/src/components/Footer/FooterStyle.css
@@ -6,7 +6,7 @@
     align-items: center;
 }
 .footer{
-    margin-top: 170px;
+    /* margin-top: 170px; */
     padding: 7px 0;
     background-color: rgb(241, 241, 241);;
 }
